update + test