@@ -1,18 +1,16 @@
 package fr.univnantes.alma.commons.card.development.knight;
 
-import fr.univnantes.alma.core.notification.NotificationJSON;
-import fr.univnantes.alma.commons.notification.NotificationReplyJSON;
-import fr.univnantes.alma.core.command.CommandManager;
+import fr.univnantes.alma.commons.command.CommandJSONImpl;
+import fr.univnantes.alma.core.command.CommandJSON;
 import fr.univnantes.alma.core.card.type.DevelopmentCard;
 import fr.univnantes.alma.core.player.Player;
 import org.springframework.lang.NonNull;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.Objects;
-import java.util.UUID;
 
 /**
- * Class representing knight cards
+ * Implementation of a card: knight
  */
 public class KnightCard extends DevelopmentCard {
 
@@ -24,23 +22,13 @@ public class KnightCard extends DevelopmentCard {
     }
 
     /**
-     * Creates the knight card
-     *
-     * @param uuid the uuid
-     */
-    public KnightCard(@NonNull UUID uuid) {
-        super(uuid, "Knight", "catan-web/catan-client/src/assets/special-card/Knight.png");
-    }
-
-    /**
      * {@inheritDoc}
      */
     @Override
-    public @NonNull NotificationJSON useEffect(@NonNull CommandManager commandManager, @NonNull Player player) {
-        Objects.requireNonNull(commandManager, "commandManager cannot be null!");
+    public @NonNull CommandJSON useEffect(@NonNull Player player) {
         Objects.requireNonNull(player, "player cannot be null!");
 
-        return new NotificationReplyJSON(List.of("moveThiefAndTakeCard"));
+        return new CommandJSONImpl("askMoveThiefAndTakeCard", Collections.emptyList(), true);
     }
 
 }
